--- a/docs/main.tex
+++ b/docs/main.tex
@@ -120,7 +120,7 @@
 
 \title{Ling 411 - Fall 2024}
 \author{Ümit Atlamaz}
-\date{2024-11-11}
+\date{2024-11-18}
 
 \begin{document}
 \maketitle
@@ -746,11 +746,11 @@ Once you install a package, you need to load it before you can use its functions
 
 \begin{verbatim}
 ## -- Attaching core tidyverse packages ------------------------ tidyverse 2.0.0 --
-## v dplyr     1.1.3     v readr     2.1.4
+## v dplyr     1.1.2     v readr     2.1.4
 ## v forcats   1.0.0     v stringr   1.5.0
-## v ggplot2   3.4.3     v tibble    3.2.1
-## v lubridate 1.9.2     v tidyr     1.3.0
-## v purrr     1.0.2     
+## v ggplot2   3.4.2     v tibble    3.2.1
+## v lubridate 1.9.3     v tidyr     1.3.0
+## v purrr     1.0.1     
 ## -- Conflicts ------------------------------------------ tidyverse_conflicts() --
 ## x dplyr::filter() masks stats::filter()
 ## x dplyr::lag()    masks stats::lag()
@@ -3157,7 +3157,7 @@ One final useful function is the \texttt{filter()} function. It allows you to fi
 
 \chapter{Plotting}\label{plotting-1}
 
-(11 November, 2024, 14:20)
+(18 November, 2024, 11:13)
 
 \section{The basics of ggplot2}\label{the-basics-of-ggplot2}
 
@@ -4890,6 +4890,535 @@ In R, we can calculate the correlations of two variables using the \texttt{cor()
 \end{Highlighting}
 \end{Shaded}
 
+\chapter{Linear Regression with one Predictor}\label{linear-regression-with-one-predictor}
+
+In the previous section, we looked at some descriptive statistics about data. In all of these cases, we looked at the descriptive statistics of a \textbf{single variable}. For example, we looked at the mean and standard deviation of total sleep hours for various animals. The variable we considered was \texttt{total\_sleep\_hours}. This is also called \textbf{univariate statistics} because we were interested in the statistics of a \textbf{single variable}.
+
+Now, we are moving onto \textbf{bivariate statistics}. In other words, we will analyze the relationship between two variables. Instead of calculating the \textbf{mean} of a single variable, we will calculate the \textbf{conditional mean} of a variable based on some other variable. For example, we could try calculating the relationship between \texttt{total\_sleep\_hours} and \texttt{bodyweight}.
+
+\section{Word Frequency Effects}\label{word-frequency-effects}
+
+Instead of looking at animal sleep hours, this time let's look at something more relevant for linguistics. Earlier, we discussed the role of frequency in processing.
+
+\begin{itemize}
+\tightlist
+\item
+  Our hypothesis was that more frequent words will be processed more easily.
+\item
+  We operationalized this hypothesis by picking
+
+  \begin{itemize}
+  \tightlist
+  \item
+    \textbf{word frequency} as our \textbf{independent variable} (also called a \textbf{predictor})
+  \item
+    \textbf{reaction time} as our \textbf{dependent variable} (also called \textbf{response} or \textbf{outcome variable})
+  \end{itemize}
+\end{itemize}
+
+The typical dataset we will be working with has a structure similar to the one below:
+
+\begin{longtable}[]{@{}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 6\tabcolsep) * \real{0.2174}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 6\tabcolsep) * \real{0.2174}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 6\tabcolsep) * \real{0.2609}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 6\tabcolsep) * \real{0.3043}}@{}}
+\toprule\noalign{}
+\begin{minipage}[b]{\linewidth}\raggedright
+dependent var.(\(Y\))
+\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
+predictor 1(\(X_1\))
+\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
+predictor 2(\(X_2\))
+\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
+(other predictors)
+\end{minipage} \\
+\midrule\noalign{}
+\endhead
+\bottomrule\noalign{}
+\endlastfoot
+705 & 1.2 & 2.2 & (\ldots) \\
+209 & 8.3 & -4.0 & (\ldots) \\
+334 & 7.2 & -1.4 & (\ldots) \\
+\ldots{} & \ldots{} & \ldots{} & (\ldots) \\
+\end{longtable}
+
+\begin{itemize}
+\tightlist
+\item
+  What the variables represent will depend on the problem you're studying and the question you're asking
+
+  \begin{itemize}
+  \tightlist
+  \item
+    dependent variable (e.g., reaction time)
+  \item
+    predictor 1 (e.g., frequency)
+  \item
+    predictor 2 (e.g., familiarity)
+  \end{itemize}
+\end{itemize}
+
+Let us take a look at a linear regression model where \texttt{x\ =\ frequency} and \texttt{y=response\ time}.
+
+\begin{figure}
+\centering
+\includegraphics{./img/lr/lr1.png}
+\caption{\label{fig:linearregression1}Response duration as a function of word frequency. The frequencies are not raw frequencies. Instead, log frequencies are used. We'll talk more about this.}
+\end{figure}
+
+\begin{itemize}
+\tightlist
+\item
+  Each point on the plot above indicates the average response time of multiple participants.
+\item
+  The somewhat diagonal line is called the \textbf{regression line}.
+\end{itemize}
+
+\section{Simple Linear Regression}\label{simple-linear-regression}
+
+In simple regression, our goal is to find the \textbf{regression line} as IT IS our model. The line extends to infinity and makes predictions about every point on its path. For example, our \textbf{model} can make a prediction about the reaction time if I were to find a word that has the log frequency 7. It would tell me that the reaction time would be a little below 400 miliseconds.
+
+An important point regarding simple linear regression is that it can be used for data where the dependent variable is \textbf{continuous} (e.g.~436 miliseconds) but not \textbf{categorial} (e.g.~grammatical/ungrammatical).
+
+\section{Finding the Regression Line}\label{finding-the-regression-line}
+
+In simple linear regression, the value for a \textbf{dependent variable} is a \textbf{linear function of} the \textbf{predictor variable}. A linear function looks like the following.
+
+\[y = a + b * x\]
+
+Let us try to understand these values a bit.
+
+\[ \underbrace{Y}_{\text{dependent variable}} =
+            \overbrace{\underbrace{a}_{\text{intercept}}}^{\text{additive term}} + 
+            \overbrace{\underbrace{b}_{\text{slope}} * \underbrace{X}_{\text{predictor}}}^{\text{additive term}} \]
+
+Mathematically, a line is defined in terms of an \textbf{intercept} and \textbf{slope}.
+
+\begin{itemize}
+\tightlist
+\item
+  \textbf{Slope} can be defined as the amount of change in \texttt{y} as \texttt{x} changes one unit.
+  \[ slope = \frac{\Delta y}{\Delta x}  \]
+\item
+  A rising slope will have a positive value whereas a descending slope will have a positive value.
+\item
+  For example, the slope in the Response Duration Model above is -70. This means that for each unit of increase in frequency, we observe a 70ms decrease in reaction time.
+\end{itemize}
+
+A slope is not enough to define a line on a plot. There can be an infinite number of lines that have the same slope. We also need the \textbf{intercept}. Intercept determines the value predicted for y when x is 0. Consider the following graphs.
+
+\begin{figure}
+\centering
+\includegraphics{./img/lr/lr2.png}
+\caption{\label{fig:interceptslope}Lines with different intercept and slope values.}
+\end{figure}
+
+The intercept for the data Response Duration Model above is 880ms. So, our Response Duration Model is:
+
+\[response\ duration = 880ms + (-70 \frac{ms}{freq}) * word\ frequecny   \]
+
+A good way to remember the intercept and the slope and a linear model is to remember the \textbf{taxi fares}. The taxi fares will usually start with a constant fee (a minimum fee). This is your intercept. It's the 0th kilometers and it already costs you 7 TLs. Then the cost for each kilometer is your slope. At the time of writing these notes, it is 6TLs.
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\FunctionTok{library}\NormalTok{(ggplot2)}
+
+\NormalTok{distance }\OtherTok{=} \DecValTok{1}\SpecialCharTok{:}\DecValTok{20}
+\NormalTok{cost }\OtherTok{=} \DecValTok{20}\SpecialCharTok{+}\NormalTok{(}\DecValTok{14}\SpecialCharTok{*}\NormalTok{distance)}
+
+\FunctionTok{ggplot}\NormalTok{(}\AttributeTok{data=}\ConstantTok{NULL}\NormalTok{, }\FunctionTok{aes}\NormalTok{(distance,cost)) }\SpecialCharTok{+}
+  \FunctionTok{scale\_x\_continuous}\NormalTok{(}\AttributeTok{breaks =} \FunctionTok{seq}\NormalTok{(}\DecValTok{0}\NormalTok{, }\DecValTok{20}\NormalTok{, }\AttributeTok{by =}\DecValTok{1}\NormalTok{)) }\SpecialCharTok{+}
+  \FunctionTok{scale\_y\_continuous}\NormalTok{(}\AttributeTok{breaks =} \FunctionTok{seq}\NormalTok{(}\DecValTok{0}\NormalTok{, }\DecValTok{500}\NormalTok{, }\AttributeTok{by =} \DecValTok{20}\NormalTok{)) }\SpecialCharTok{+} 
+  \FunctionTok{geom\_smooth}\NormalTok{(}\AttributeTok{method=}\StringTok{"lm"}\NormalTok{, }\AttributeTok{formula =}\NormalTok{y}\SpecialCharTok{\textasciitilde{}}\NormalTok{x }\SpecialCharTok{+} \FunctionTok{I}\NormalTok{(}\DecValTok{20}\SpecialCharTok{+}\DecValTok{14}\SpecialCharTok{*}\NormalTok{x))}
+\end{Highlighting}
+\end{Shaded}
+
+\includegraphics{main_files/figure-latex/unnamed-chunk-200-1.pdf}
+
+\textbf{Slope} and \textbf{intercept} are the \textbf{coefficients} of our linear regression model. Our task is to find the \textbf{coefficients} from the data.
+
+\section{Estimating the Coefficients}\label{estimating-the-coefficients}
+
+A Linear Regression analysis of a particular data is essentially all about \textbf{estimating coefficients} and \textbf{interpreting the results}. In the \textbf{taxi model}, we already knew the coefficients. So, we had a model about the world and we can use the model to make predictions about taxi costs. In the Response Duration Model, the coefficients were learnt from the data but I gave them to you directly. So, how are we going to estimate the coefficients when what we have is just data but nothing else?
+
+Let's not get into the weeds of how to find the right linear regression model. Instead, let's just use R to estimate the coefficients. This is called \textbf{fitting a model}. So, let's fit a linear model on the taxi model and interpret its results. We'll start with the taxi model simply because we already know the coefficients. We'll let R estimate some coefficients for us and then compare them with the coefficients we used to generate the \texttt{cost} data above from the \texttt{distance} variables and our coefficients.
+
+The simplest way to fit a linear model on some data is the \texttt{lm()} function. \texttt{lm()} takes two variables \texttt{x} (predictor) and \texttt{y} (dependent variable) and fits a model by modeling \texttt{y} as a linear function of \texttt{x}. The tilde \texttt{\textasciitilde{}} means: element on the left as a function of element on the right.
+
+For our taxi model, we will model cost as a function of duration. The following lines of code does that.
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\CommentTok{\# fit a linear regression model of cost as a function of distance}
+\NormalTok{taxi\_model }\OtherTok{\textless{}{-}} \FunctionTok{lm}\NormalTok{(cost }\SpecialCharTok{\textasciitilde{}}\NormalTok{ distance)}
+
+\CommentTok{\# print the model coefficients}
+\NormalTok{taxi\_model}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{\#\# }
+\NormalTok{\#\# Call:}
+\NormalTok{\#\# lm(formula = cost \textasciitilde{} distance)}
+\NormalTok{\#\# }
+\NormalTok{\#\# Coefficients:}
+\NormalTok{\#\# (Intercept)     distance  }
+\NormalTok{\#\#          20           14}
+\end{Highlighting}
+\end{Shaded}
+
+\textbf{Unbelievable!} The model estimated the intercept (start cost) as 20 and the slope (cost per km) as 14. Simple as that. Notice that the model estimated these coefficients simply from the data but nothing else.
+
+The model object that we stored in the variable \texttt{taxi\_model} has a lot more information. Let us take a look at the results of our model. To do this, we'll take use the \texttt{glance()} function from the \texttt{broom} package.
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\FunctionTok{library}\NormalTok{(broom)}
+\FunctionTok{library}\NormalTok{(tidyverse)}
+\FunctionTok{glance}\NormalTok{(taxi\_model)}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{verbatim}
+## Warning in summary.lm(x): essentially perfect fit: summary may be unreliable
+
+## Warning in summary.lm(x): essentially perfect fit: summary may be unreliable
+\end{verbatim}
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{\#\# \# A tibble: 1 x 12}
+\NormalTok{\#\#   r.squared adj.r.squared    sigma statistic   p.value    df logLik    AIC}
+\NormalTok{\#\#       \textless{}dbl\textgreater{}         \textless{}dbl\textgreater{}    \textless{}dbl\textgreater{}     \textless{}dbl\textgreater{}     \textless{}dbl\textgreater{} \textless{}dbl\textgreater{}  \textless{}dbl\textgreater{}  \textless{}dbl\textgreater{}}
+\NormalTok{\#\# 1         1             1 2.58e{-}14   1.96e32 8.70e{-}281     1   598. {-}1191.}
+\NormalTok{\#\# \# i 4 more variables: BIC \textless{}dbl\textgreater{}, deviance \textless{}dbl\textgreater{}, df.residual \textless{}int\textgreater{}, nobs \textless{}int\textgreater{}}
+\end{Highlighting}
+\end{Shaded}
+
+There are a lot of details. For now, we'll focus on only two values \textbf{R2} and the \textbf{p value}.
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{results }\OtherTok{\textless{}{-}} \FunctionTok{glance}\NormalTok{(taxi\_model) }\SpecialCharTok{\%\textgreater{}\%}
+  \FunctionTok{select}\NormalTok{(r.squared, p.value)}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{verbatim}
+## Warning in summary.lm(x): essentially perfect fit: summary may be unreliable
+
+## Warning in summary.lm(x): essentially perfect fit: summary may be unreliable
+\end{verbatim}
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{results}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{\#\# \# A tibble: 1 x 2}
+\NormalTok{\#\#   r.squared   p.value}
+\NormalTok{\#\#       \textless{}dbl\textgreater{}     \textless{}dbl\textgreater{}}
+\NormalTok{\#\# 1         1 8.70e{-}281}
+\end{Highlighting}
+\end{Shaded}
+
+Without going into any detail yet, I can tell you that we got an excellent model. Our \textbf{R2} is 1, which is perfect and our p value is very small \texttt{1.51e-287} (This means that there are 286 zeroes after 0. and before 151. So, a very small number). When the p value is so small, we can conclude that the relation between distance and cost is \textbf{statistically significant} (i.e.~not random).
+
+\section{Data is messy}\label{data-is-messy}
+
+In the taxi model above, we worked with a very simplistic and ideal dataset. We know that in theory that is what a tax fare should look like. However, İstanbul is a crowded city and there are lots of traffic jams and traffic is quite unpredictable as there are so many random variables. Since the taxi charges you not only for the distance but also the duration you wait at the lights, there is always going to be some random addition to the fare. Let us incorporate that randomness to our taxi cost data and rerun our model to see what it looks like.
+
+All we are going to do is to add some random values to our taxi prices. Let's generate some random numbers and bind it to a new cost variable.
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\FunctionTok{set.seed}\NormalTok{(}\DecValTok{42}\NormalTok{)}
+\NormalTok{hidden\_cost }\OtherTok{\textless{}{-}} \FunctionTok{rnorm}\NormalTok{(}\DecValTok{20}\NormalTok{, }\AttributeTok{mean=}\FloatTok{7.5}\NormalTok{, }\AttributeTok{sd=}\FloatTok{4.5}\NormalTok{)}
+\NormalTok{total\_cost }\OtherTok{\textless{}{-}}\NormalTok{ cost }\SpecialCharTok{+}\NormalTok{ hidden\_cost}
+\end{Highlighting}
+\end{Shaded}
+
+Let us plot the theoretical costs and the total costs side by side. We'll use the \texttt{gridExtra} package to plot two plots side by side.
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\FunctionTok{library}\NormalTok{(gridExtra)}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{verbatim}
+## 
+## Attaching package: 'gridExtra'
+\end{verbatim}
+
+\begin{verbatim}
+## The following object is masked from 'package:dplyr':
+## 
+##     combine
+\end{verbatim}
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{plot1 }\OtherTok{\textless{}{-}} \FunctionTok{ggplot}\NormalTok{(}\AttributeTok{data=}\ConstantTok{NULL}\NormalTok{, }\FunctionTok{aes}\NormalTok{(distance,cost)) }\SpecialCharTok{+}
+  \FunctionTok{scale\_x\_continuous}\NormalTok{(}\AttributeTok{breaks =} \FunctionTok{seq}\NormalTok{(}\DecValTok{0}\NormalTok{, }\DecValTok{20}\NormalTok{, }\AttributeTok{by =}\DecValTok{1}\NormalTok{)) }\SpecialCharTok{+}
+  \FunctionTok{scale\_y\_continuous}\NormalTok{(}\AttributeTok{breaks =} \FunctionTok{seq}\NormalTok{(}\DecValTok{0}\NormalTok{, }\DecValTok{500}\NormalTok{, }\AttributeTok{by =} \DecValTok{20}\NormalTok{)) }\SpecialCharTok{+} 
+  \FunctionTok{geom\_smooth}\NormalTok{(}\AttributeTok{method=}\StringTok{"lm"}\NormalTok{) }\SpecialCharTok{+}
+  \FunctionTok{geom\_point}\NormalTok{() }\SpecialCharTok{+}
+  \FunctionTok{ggtitle}\NormalTok{(}\StringTok{"Taxi cost without traffic"}\NormalTok{)}
+
+\NormalTok{plot2 }\OtherTok{\textless{}{-}} \FunctionTok{ggplot}\NormalTok{(}\AttributeTok{data=}\ConstantTok{NULL}\NormalTok{, }\FunctionTok{aes}\NormalTok{(distance,total\_cost)) }\SpecialCharTok{+}
+  \FunctionTok{scale\_x\_continuous}\NormalTok{(}\AttributeTok{breaks =} \FunctionTok{seq}\NormalTok{(}\DecValTok{0}\NormalTok{, }\DecValTok{20}\NormalTok{, }\AttributeTok{by =}\DecValTok{1}\NormalTok{)) }\SpecialCharTok{+}
+  \FunctionTok{scale\_y\_continuous}\NormalTok{(}\AttributeTok{breaks =} \FunctionTok{seq}\NormalTok{(}\DecValTok{0}\NormalTok{, }\DecValTok{500}\NormalTok{, }\AttributeTok{by =} \DecValTok{20}\NormalTok{)) }\SpecialCharTok{+} 
+  \FunctionTok{geom\_smooth}\NormalTok{(}\AttributeTok{method=}\StringTok{"lm"}\NormalTok{)}\SpecialCharTok{+}
+  \FunctionTok{geom\_point}\NormalTok{()}\SpecialCharTok{+}
+  \FunctionTok{ggtitle}\NormalTok{(}\StringTok{"Taxi cost with traffic"}\NormalTok{)}
+
+\FunctionTok{grid.arrange}\NormalTok{(plot1, plot2, }\AttributeTok{ncol=}\DecValTok{2}\NormalTok{)}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{verbatim}
+## `geom_smooth()` using formula = 'y ~ x'
+\end{verbatim}
+
+\begin{verbatim}
+## `geom_smooth()` using formula = 'y ~ x'
+\end{verbatim}
+
+\includegraphics{main_files/figure-latex/unnamed-chunk-205-1.pdf}
+
+OK, now it looks like we have some more realistic data. Let us rerun our linear model to see what the coefficients look like.
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{better\_taxi\_model }\OtherTok{\textless{}{-}} \FunctionTok{lm}\NormalTok{(total\_cost}\SpecialCharTok{\textasciitilde{}}\NormalTok{distance)}
+
+\NormalTok{better\_taxi\_model}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{\#\# }
+\NormalTok{\#\# Call:}
+\NormalTok{\#\# lm(formula = total\_cost \textasciitilde{} distance)}
+\NormalTok{\#\# }
+\NormalTok{\#\# Coefficients:}
+\NormalTok{\#\# (Intercept)     distance  }
+\NormalTok{\#\#       32.08        13.65}
+\end{Highlighting}
+\end{Shaded}
+
+Notice that we got a new intercept and slope. It's kinda weird. We know that the taxi start fare is 20TL. However, our intercept is a lot higher (this will differ as each time you run your code as the traffic cost we calculated is random unless you set some seed number to generate the random values). This is quite off given our original intercept.
+
+Notice that the slope is a little off too. It's not exactly 14 but it's not way off like the intercept. So, did our linear model do well? Before answering this question more formally, I'll draw your attention to one point. Our model predicts that your initial taxi fare will be a little higher at the beginning and it will sort of even out as your distance increases. Even though our model doesn't guess the intercept correctly, it still does a very decent job in modeling the real life taxi costs (or a simulation of it). Just add up the intercept and slope and that should give you around the minimum cost you'll pay for a taxi ride.
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\FunctionTok{coef}\NormalTok{(better\_taxi\_model)[}\DecValTok{1}\NormalTok{] }\SpecialCharTok{+} \FunctionTok{coef}\NormalTok{(better\_taxi\_model)[}\DecValTok{2}\NormalTok{]}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{\#\# (Intercept) }
+\NormalTok{\#\#    45.72571}
+\end{Highlighting}
+\end{Shaded}
+
+At this point, I want to remind you that taxi rides in İstanbul have a minimum of 70 TLs for short distance trips (2km or less). So, our model does pretty good for a real life scenario.
+
+\section{Simplified Frequency Data}\label{simplified-frequency-data}
+
+Let us use a simple frequency data. Go ahead and download the \texttt{log10ELP\_frequency.csv} file from Moodle. This is the same data in Bodo Winter's ELP\_frequency.csv file with an added column for log10 normalization. We will plot the data using a scatterplot with geom\_point and also draw a regression line.
+
+We will use log normal values as the x axis and the reaction time as the y axis.
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\FunctionTok{library}\NormalTok{(ggrepel)}
+
+
+\NormalTok{freq\_data }\OtherTok{\textless{}{-}} \FunctionTok{read\_csv}\NormalTok{(}\StringTok{"/Users/umit/ling\_411/data/log10ELP\_frequency.csv"}\NormalTok{)}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{verbatim}
+## Rows: 12 Columns: 4
+## -- Column specification --------------------------------------------------------
+## Delimiter: ","
+## chr (1): Word
+## dbl (3): RT, Freq, log10freq
+## 
+## i Use `spec()` to retrieve the full column specification for this data.
+## i Specify the column types or set `show_col_types = FALSE` to quiet this message.
+\end{verbatim}
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\FunctionTok{ggplot}\NormalTok{(freq\_data, }\FunctionTok{aes}\NormalTok{(}\AttributeTok{x=}\NormalTok{log10freq, }\AttributeTok{y=}\NormalTok{RT)) }\SpecialCharTok{+}
+  \FunctionTok{scale\_x\_continuous}\NormalTok{(}\AttributeTok{limits =} \FunctionTok{c}\NormalTok{(}\DecValTok{0}\NormalTok{,}\DecValTok{5}\NormalTok{)) }\SpecialCharTok{+}
+  \FunctionTok{geom\_text\_repel}\NormalTok{(}\FunctionTok{aes}\NormalTok{(}\AttributeTok{label =}\NormalTok{ Word)) }\SpecialCharTok{+}
+  \FunctionTok{geom\_point}\NormalTok{()}\SpecialCharTok{+}
+  \FunctionTok{geom\_smooth}\NormalTok{(}\AttributeTok{method=}\StringTok{"lm"}\NormalTok{,}\AttributeTok{se=}\NormalTok{F)}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{verbatim}
+## `geom_smooth()` using formula = 'y ~ x'
+\end{verbatim}
+
+\includegraphics{main_files/figure-latex/unnamed-chunk-208-1.pdf}
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{freq\_model }\OtherTok{\textless{}{-}} \FunctionTok{lm}\NormalTok{(freq\_data}\SpecialCharTok{$}\NormalTok{RT }\SpecialCharTok{\textasciitilde{}}\NormalTok{ freq\_data}\SpecialCharTok{$}\NormalTok{log10freq)}
+\end{Highlighting}
+\end{Shaded}
+
+OK, let us also get a glace at our model. We'll first take a look at the slope and the intercept and then \textbf{R2} and the \textbf{p value}.
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\FunctionTok{coef}\NormalTok{(freq\_model)}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{\#\#         (Intercept) freq\_data$log10freq }
+\NormalTok{\#\#           870.90539           {-}70.27646}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\FunctionTok{glance}\NormalTok{(freq\_model)}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{\#\# \# A tibble: 1 x 12}
+\NormalTok{\#\#   r.squared adj.r.squared sigma statistic  p.value    df logLik   AIC   BIC}
+\NormalTok{\#\#       \textless{}dbl\textgreater{}         \textless{}dbl\textgreater{} \textless{}dbl\textgreater{}     \textless{}dbl\textgreater{}    \textless{}dbl\textgreater{} \textless{}dbl\textgreater{}  \textless{}dbl\textgreater{} \textless{}dbl\textgreater{} \textless{}dbl\textgreater{}}
+\NormalTok{\#\# 1     0.737         0.711  63.3      28.1 0.000348     1  {-}65.7  137.  139.}
+\NormalTok{\#\# \# i 3 more variables: deviance \textless{}dbl\textgreater{}, df.residual \textless{}int\textgreater{}, nobs \textless{}int\textgreater{}}
+\end{Highlighting}
+\end{Shaded}
+
+\section{Residuals}\label{residuals}
+
+So far, we built and plotted linear models by estimating the intercept and slope of a line that seems to best describe our data. In the simple taxi model, we were in a perfect position. Our model had a \textbf{perfect fit} on our data. However, once we introduced some \textbf{random noise} (e.g.~random traffic jams) into our data, our linear model still did a decent job but it was not a perfect fit.
+
+Next, we tried modeling the simple frequency data and we got a decent model that describes the trend in our data but the fit is not perfect. Can we find a way to quantify how good our model fits our data (``goodness of fit''). That's what we will do here. Let us reconsider the frequency data plot. This time, we'll draw lines from the data points to the regression line. The distance for each data point is called a \textbf{residual}. It describes the amount by which our model missed the actual value.
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{freq\_model }\OtherTok{\textless{}{-}} \FunctionTok{lm}\NormalTok{(freq\_data}\SpecialCharTok{$}\NormalTok{RT }\SpecialCharTok{\textasciitilde{}}\NormalTok{ freq\_data}\SpecialCharTok{$}\NormalTok{log10freq)}
+\FunctionTok{ggplot}\NormalTok{(freq\_data, }\FunctionTok{aes}\NormalTok{(}\AttributeTok{x=}\NormalTok{log10freq, }\AttributeTok{y=}\NormalTok{RT)) }\SpecialCharTok{+}
+  \FunctionTok{scale\_x\_continuous}\NormalTok{(}\AttributeTok{limits =} \FunctionTok{c}\NormalTok{(}\DecValTok{0}\NormalTok{,}\DecValTok{5}\NormalTok{)) }\SpecialCharTok{+}
+  \FunctionTok{geom\_text\_repel}\NormalTok{(}\FunctionTok{aes}\NormalTok{(}\AttributeTok{label =}\NormalTok{ Word)) }\SpecialCharTok{+}
+  \FunctionTok{geom\_point}\NormalTok{()}\SpecialCharTok{+}
+  \FunctionTok{geom\_smooth}\NormalTok{(}\AttributeTok{method=}\StringTok{"lm"}\NormalTok{,}\AttributeTok{se=}\NormalTok{F)}\SpecialCharTok{+}
+  \FunctionTok{geom\_segment}\NormalTok{(}\FunctionTok{aes}\NormalTok{(}\AttributeTok{x =}\NormalTok{ log10freq, }\AttributeTok{y =}\NormalTok{ RT,}
+                   \AttributeTok{xend =}\NormalTok{ log10freq, }\AttributeTok{yend =} \FunctionTok{fitted}\NormalTok{(freq\_model)))}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{verbatim}
+## `geom_smooth()` using formula = 'y ~ x'
+\end{verbatim}
+
+\includegraphics{main_files/figure-latex/unnamed-chunk-211-1.pdf}
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\FunctionTok{ggplot}\NormalTok{(freq\_data, }\FunctionTok{aes}\NormalTok{(}\AttributeTok{x=}\NormalTok{log10freq, }\AttributeTok{y=}\NormalTok{RT)) }\SpecialCharTok{+}
+  \FunctionTok{scale\_x\_continuous}\NormalTok{(}\AttributeTok{limits =} \FunctionTok{c}\NormalTok{(}\DecValTok{0}\NormalTok{,}\DecValTok{5}\NormalTok{)) }\SpecialCharTok{+}
+  \FunctionTok{geom\_text\_repel}\NormalTok{(}\FunctionTok{aes}\NormalTok{(}\AttributeTok{label =}\NormalTok{ Word)) }\SpecialCharTok{+}
+  \FunctionTok{geom\_point}\NormalTok{()}\SpecialCharTok{+}
+  \FunctionTok{geom\_hline}\NormalTok{(}\AttributeTok{yintercept =} \DecValTok{680}\NormalTok{)}\SpecialCharTok{+}
+  \FunctionTok{geom\_segment}\NormalTok{(}\FunctionTok{aes}\NormalTok{(}\AttributeTok{x =}\NormalTok{ log10freq, }\AttributeTok{y =}\NormalTok{ RT,}
+                   \AttributeTok{xend =}\NormalTok{ log10freq, }\AttributeTok{yend =} \DecValTok{680}\NormalTok{))}
+\end{Highlighting}
+\end{Shaded}
+
+\includegraphics{main_files/figure-latex/unnamed-chunk-212-1.pdf}
+
+Now, we have two models:
+
+\begin{itemize}
+\tightlist
+\item
+  A model where there is a relation between frequency and reaction time
+\item
+  A null model where there is no relation between frequency and reaction time (reaction time is independent of frequency)
+\end{itemize}
+
+\subsection{Sum of Squared Errors}\label{sum-of-squared-errors}
+
+One way to describe the errors of the model is to sum the squares of each error value. This is called the Sum of Squared Errors.
+
+To do this, we need to get the residuals of the model, square them and then sum them. Let us do this for the linear model.
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{SSE\_freq\_model }\OtherTok{\textless{}{-}} \FunctionTok{sum}\NormalTok{((}\FunctionTok{residuals}\NormalTok{(freq\_model))}\SpecialCharTok{\^{}}\DecValTok{2}\NormalTok{)}
+\NormalTok{SSE\_freq\_model}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{\#\# [1] 40114.97}
+\end{Highlighting}
+\end{Shaded}
+
+Let us also calculate it for the null model. The intercept for the null model was 680 I found this value by taking the average reaction time. This will be my null model. The mean was 679.9167. So, we'll deduce the the mean from the actual values to find the residuals. The rest is just the same.
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{null\_model\_residuals }\OtherTok{\textless{}{-}}\NormalTok{ freq\_data}\SpecialCharTok{$}\NormalTok{RT }\SpecialCharTok{{-}} \DecValTok{680}
+\NormalTok{SSE\_null\_model }\OtherTok{\textless{}{-}} \FunctionTok{sum}\NormalTok{(null\_model\_residuals}\SpecialCharTok{\^{}}\DecValTok{2}\NormalTok{)}
+\NormalTok{SSE\_null\_model}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{\#\# [1] 152743.3}
+\end{Highlighting}
+\end{Shaded}
+
+These numbers are very similar to what Bodo Winter reports in his chapter. He might not have done the rounding I did. We use the null model to calculate a \textbf{standardized measure of fit}. One measure is \textbf{R2} and it is calculated as follows.
+
+\[R^2 = 1 - \frac{SSE_{model}}{SSE_{null}} \]
+Let's calculate \textbf{R2}.
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{r\_squared }\OtherTok{\textless{}{-}} \DecValTok{1} \SpecialCharTok{{-}}\NormalTok{ (SSE\_freq\_model}\SpecialCharTok{/}\NormalTok{SSE\_null\_model)}
+
+\NormalTok{r\_squared}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{\#\# [1] 0.73737}
+\end{Highlighting}
+\end{Shaded}
+
+\textbf{Excellent!} We've calculated \textbf{R2} and it is the same as what we found earlier when we took at a look at the model report using the \texttt{glance()} function.
+
+So, what is this \textbf{R2}? When we interpret \textbf{R2}, we say ``n'' amount of the variance in the dependent variable (RT) can be accounted for by incorporating the independent variable (word frequency). In this case, 73\% of the variance is due to word frequency. The remaining 27\% is due to chance or some other factors we didn't consider.
 
   \bibliography{book.bib,packages.bib}
 
